# Protos

./: .clang-format  CMakeLists.txt  CMakeLists.txt.inc  CMakePresets.json  Imm_wrapper.proto  README.md  data_plot.proto  draw.py  immortals-protos-config.cmake.in  main.py  messages_immortals_common.proto  messages_immortals_configs.proto  messages_immortals_robot_command.proto  messages_immortals_robot_common.proto  messages_immortals_robot_config.proto  messages_immortals_robot_feedback.proto  messages_immortals_robot_wrapper.proto  messages_immortals_strategy.proto  messages_immortals_world_state.proto  messages_immortals_wrapper.proto  messages_robocup_ssl_detection.proto  messages_robocup_ssl_wrapper_legacy.proto  protos-config.cmake.in  robot-feedback.pb.cc  robot-feedback.pb.h  robot_command.pb.cc  robot_command.pb.h  robot_command.proto  vcpkg-configuration.json  vcpkg.json
Debug/: debug.py
Debug/proto/: data_plot_pb2.py
Vision/: vision.py
gr-sim/: grSim_Packet.proto
grsim/: _grsim_commands.proto  _grsim_robotstatus.proto  grSim_Commands.proto  grSim_Packet.proto  grSim_Replacement.proto  grSim_Robotstatus.proto  grsim_commands.proto  grsim_packet.proto  grsim_replacement.proto  grsim_robotstatus.proto
immortals/: Imm_wrapper.proto  command.proto  common.proto  data_plot.proto  debug.proto  messages_immortals_aidebug.proto  messages_immortals_common.proto  messages_immortals_configs.proto  messages_immortals_robot_command.proto  messages_immortals_robot_config.proto  messages_immortals_robot_feedback.proto  messages_immortals_robot_wrapper.proto  messages_immortals_world_state.proto  messages_immortals_wrapper.proto  micro.proto  play_book.proto  robot_control.proto  robot_feedback.proto  state.proto  strategy.proto  text_log.proto  vision_interface.proto  visual_log.proto
protos/grsim/: grsim_packet.proto
protos/immortals/: command.proto  common.proto  debug.proto  micro.proto  referee_state.proto  state.proto  world_state.proto
protos/ssl-game-controller/: ssl_gc_game_event.proto  ssl_gc_rcon_team.proto  ssl_gc_referee_message.proto
protos/ssl-simulation-protocol/: ssl_simulation_config.proto  ssl_simulation_control.proto  ssl_simulation_error.proto  ssl_simulation_robot_feedback.proto  ssl_simulation_synchronous.proto
protos/ssl-vision/: messages_robocup_ssl_detection_tracked.proto  messages_robocup_ssl_geometry.proto  messages_robocup_ssl_wrapper.proto  messages_robocup_ssl_wrapper_tracked.proto
ssl-common/: ssl_common.proto  ssl_geometry.proto
ssl-game-controller/: ssl_autoref_ci.proto  ssl_gc_api.proto  ssl_gc_change.proto  ssl_gc_ci.proto  ssl_gc_common.proto  ssl_gc_engine.proto  ssl_gc_engine_config.proto  ssl_gc_game_event.proto  ssl_gc_geometry.proto  ssl_gc_rcon.proto  ssl_gc_rcon_autoref.proto  ssl_gc_rcon_remotecontrol.proto  ssl_gc_rcon_team.proto  ssl_gc_referee_message.proto  ssl_gc_state.proto
ssl-refbox/: game_event.proto  referee.proto
ssl-simulation-protocol/: ssl_simulation_config.proto  ssl_simulation_control.proto  ssl_simulation_error.proto  ssl_simulation_robot_control.proto  ssl_simulation_robot_feedback.proto  ssl_simulation_synchronous.proto
ssl-simulation-protocol/erforce/: ssl_simulation_custom_erforce_realism.proto  ssl_simulation_custom_erforce_robot_spec.proto
ssl-vision/: messages_robocup_ssl_detection.proto  messages_robocup_ssl_detection_tracked.proto  messages_robocup_ssl_geometry.proto  messages_robocup_ssl_geometry_legacy.proto  messages_robocup_ssl_refbox_log.proto  messages_robocup_ssl_wrapper.proto  messages_robocup_ssl_wrapper_legacy.proto  messages_robocup_ssl_wrapper_tracked.proto
